# pysqlscribe

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: pysqlscibe-documentation.md  pysqlscribe-bug-report.md  pysqlscribe-feature-request.md
.github/workflows/: ci.yaml
pyquerybuilder/: query.py  schema.py  table.py
pysqlscribe/: __init__.py  aggregate_functions.py  alias.py  column.py  cte.py  dialects.py  exceptions.py  expression.py  functions.py  params.py  protocols.py  query.py  regex_patterns.py  scalar_functions.py  schema.py  table.py
pysqlscribe/ast/: base.py  nodes.py
pysqlscribe/dialects/: __init__.py  base.py  mysql.py  oracle.py  postgres.py  sqlite.py  sqlserver.py
pysqlscribe/renderers/: base.py  oracle.py  sqlserver.py
pysqlscribe/utils/: ddl_loader.py  ddl_parser.py
sqlscribe/: query.py  regex_patterns.py  schema.py  table.py
tests/: test_alias.py  test_column.py  test_cte.py  test_distinct.py  test_functions.py  test_inline_literal_types.py  test_parameterized.py  test_public_api.py  test_query.py  test_schema.py  test_sqlserver.py  test_table.py
tests/integration/: conftest.py  test_smoke.py
tests/utils/: test_ddl_loader.py
