[project]
name = "pyquerybuilder"
version = "0.0.1"
description = "A simple Python Library for building relational database queries using objects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]
